src/FireWrapper/wrapper.h

typedef struct ImVec4 ImVec4;
typedef struct ImVec2 ImVec2;
typedef struct ImGuiViewport ImGuiViewport;
typedef struct ImGuiInputTextCallbackData ImGuiInputTextCallbackData;
typedef struct ImDrawData ImDrawData;
struct ImDrawData;
struct ImGuiInputTextCallbackData;
struct ImGuiViewport;
typedef int ImGuiDataType;
typedef int ImGuiMouseButton;
typedef int ImGuiFocusedFlags;
typedef int ImGuiHoveredFlags;
typedef int ImGuiInputTextFlags;
typedef int ImGuiViewportFlags;
typedef void* ImTextureID;
typedef unsigned int ImGuiID;
typedef int(*ImGuiInputTextCallback)(ImGuiInputTextCallbackData *data);
struct ImVec2
{
	float x, y;
};
struct ImVec4
{
	float x, y, z, w;
};
struct ImGuiInputTextCallbackData
{
	ImGuiInputTextFlags EventFlag;
	ImGuiInputTextFlags Flags;
	void* UserData;
	ImWchar EventChar;
	ImGuiKey EventKey;
	char* Buf;
	int BufTextLen;
	int BufSize;
	bool BufDirty;
	int CursorPos;
	int SelectionStart;
	int SelectionEnd;
};
struct ImDrawData
{
	bool Valid;
	ImDrawList** CmdLists;
	int CmdListsCount;
	int TotalIdxCount;
	int TotalVtxCount;
	ImVec2 DisplayPos;
	ImVec2 DisplaySize;
	ImVec2 FramebufferScale;
	ImGuiViewport* OwnerViewport;
};
struct ImGuiViewport
{
	ImGuiID ID;
	ImGuiViewportFlags Flags;
	ImVec2 Pos;
	ImVec2 Size;
	ImVec2 WorkOffsetMin;
	ImVec2 WorkOffsetMax;
	float DpiScale;
	ImDrawData* DrawData;
	ImGuiID ParentViewportId;
	void* RendererUserData;
	void* PlatformUserData;
	void* PlatformHandle;
	void* PlatformHandleRaw;
	bool PlatformRequestMove;
	bool PlatformRequestResize;
	bool PlatformRequestClose;
};
typedef enum {
	ImGuiPlotType_Lines,
	ImGuiPlotType_Histogram
}ImGuiPlotType;
CIMGUI_API bool igIsWindowAppearing(void);
CIMGUI_API bool igIsWindowCollapsed(void);
CIMGUI_API bool igIsWindowFocused(ImGuiFocusedFlags flags);
CIMGUI_API bool igIsWindowHovered(ImGuiHoveredFlags flags);
CIMGUI_API ImGuiViewport* igGetWindowViewport(void);
CIMGUI_API void igGetWindowPos(ImVec2 *pOut);
CIMGUI_API void igGetWindowSize(ImVec2 *pOut);
CIMGUI_API float igGetWindowWidth(void);
CIMGUI_API float igGetWindowHeight(void);
CIMGUI_API void igIndent(float indent_w);
CIMGUI_API void igLabelText(const char* label, const char* fmt, ...);
CIMGUI_API bool igInvisibleButton(const char* str_id, const ImVec2 size);
CIMGUI_API void igImage(ImTextureID user_texture_id, const ImVec2 size, const ImVec2 uv0, const ImVec2 uv1, const ImVec4 tint_col, const ImVec4 border_col);
CIMGUI_API bool igImageButton(ImTextureID user_texture_id, const ImVec2 size, const ImVec2 uv0, const ImVec2 uv1, int frame_padding, const ImVec4 bg_col, const ImVec4 tint_col);
CIMGUI_API bool igInputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
CIMGUI_API bool igInputTextMultiline(const char* label, char* buf, size_t buf_size, const ImVec2 size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
CIMGUI_API bool igInputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
CIMGUI_API bool igInputFloat(const char* label, float* v, float step, float step_fast, const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputFloat2(const char* label, float v[2], const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputFloat3(const char* label, float v[3], const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputFloat4(const char* label, float v[4], const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputInt(const char* label, int* v, int step, int step_fast, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputInt2(const char* label, int v[2], ImGuiInputTextFlags flags);
CIMGUI_API bool igInputInt3(const char* label, int v[3], ImGuiInputTextFlags flags);
CIMGUI_API bool igInputInt4(const char* label, int v[4], ImGuiInputTextFlags flags);
CIMGUI_API bool igInputDouble(const char* label, double* v, double step, double step_fast, const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step, const void* p_step_fast, const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igInputScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_step, const void* p_step_fast, const char* format, ImGuiInputTextFlags flags);
CIMGUI_API bool igListBoxStr_arr(const char* label, int* current_item, const char* const items[], int items_count, int height_in_items);
CIMGUI_API bool igListBoxHeaderVec2(const char* label, const ImVec2 size);
CIMGUI_API bool igListBoxHeaderInt(const char* label, int items_count, int height_in_items);
CIMGUI_API void igListBoxFooter(void);
CIMGUI_API void igPlotLinesFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igPlotHistogramFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API bool igMenuItemBool(const char* label, const char* shortcut, bool selected, bool enabled);
CIMGUI_API bool igMenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled);
CIMGUI_API bool igIsWindowDocked(void);
CIMGUI_API void igLogToTTY(int auto_open_depth);
CIMGUI_API void igLogToFile(int auto_open_depth, const char* filename);
CIMGUI_API void igLogToClipboard(int auto_open_depth);
CIMGUI_API void igLogFinish(void);
CIMGUI_API void igLogButtons(void);
CIMGUI_API bool igIsItemHovered(ImGuiHoveredFlags flags);
CIMGUI_API bool igIsItemActive(void);
CIMGUI_API bool igIsItemFocused(void);
CIMGUI_API bool igIsItemClicked(ImGuiMouseButton mouse_button);
CIMGUI_API bool igIsItemVisible(void);
CIMGUI_API bool igIsItemEdited(void);
CIMGUI_API bool igIsItemActivated(void);
CIMGUI_API bool igIsItemDeactivated(void);
CIMGUI_API bool igIsItemDeactivatedAfterEdit(void);
CIMGUI_API bool igIsItemToggledOpen(void);
CIMGUI_API bool igIsAnyItemHovered(void);
CIMGUI_API bool igIsAnyItemActive(void);
CIMGUI_API bool igIsAnyItemFocused(void);
CIMGUI_API bool igIsRectVisibleVec2(const ImVec2 rect_min, const ImVec2 rect_max);
CIMGUI_API bool igIsKeyDown(int user_key_index);
CIMGUI_API bool igIsKeyPressed(int user_key_index, bool repeat);
CIMGUI_API bool igIsKeyReleased(int user_key_index);
CIMGUI_API bool igIsMouseDown(ImGuiMouseButton button);
CIMGUI_API bool igIsMouseClicked(ImGuiMouseButton button, bool repeat);
CIMGUI_API bool igIsMouseReleased(ImGuiMouseButton button);
CIMGUI_API bool igIsMouseDoubleClicked(ImGuiMouseButton button);
CIMGUI_API bool igIsMouseHoveringRect(const ImVec2 r_min, const ImVec2 r_max, bool clip);
CIMGUI_API bool igIsMousePosValid(const ImVec2* mouse_pos);
CIMGUI_API bool igIsAnyMouseDown(void);
CIMGUI_API bool igIsMouseDragging(ImGuiMouseButton button, float lock_threshold);
CIMGUI_API void igLoadIniSettingsFromDisk(const char* ini_filename);
CIMGUI_API void igLoadIniSettingsFromMemory(const char* ini_data, size_t ini_size);
CIMGUI_API void igSetAllocatorFunctions(void*(*alloc_func)(size_t sz, void* user_data), void(*free_func)(void* ptr, void* user_data), void* user_data);
CIMGUI_API void* igMemAlloc(size_t size);
CIMGUI_API void igMemFree(void* ptr);
CIMGUI_API int igPlotEx(ImGuiPlotType plot_type, const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 frame_size);
/////////////////////////hand written functions
//no LogTextV
CIMGUI_API void igLogText(CONST char *fmt, ...);